--- a/style.css
+++ b/style.css
@@ -1,290 +1,448 @@
-body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.vending-machine{
-    position: relative;
-    background-color: rgb(140, 215, 140);
-    display: flex;
-    flex-direction: row;
-    padding: 50px;
-    width: 1720px;
-    height: 850px;
+.vending-machine {
+  position: relative;
+  background-color: rgb(140, 215, 140);
+  display: flex;
+  flex-direction: row;
+  padding: 50px;
+  width: 1720px;
+  height: 850px;
 }
-h1{
-    position: absolute;
-    top: -15px;
-    left: 25px;
+h1 {
+  position: absolute;
+  top: -15px;
+  left: 25px;
 }
-.product-container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 1220px;
-    height: 800px;
-    background-color: white;
-    padding-bottom: 20px;
-    border-radius: 10px;
+.product-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 1220px;
+  height: 800px;
+  background-color: white;
+  padding-bottom: 20px;
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-.product{
-    width: 180px;
-    height: 180px;
-    margin-left: 20px;
-    margin-top: 20px;
-    background-color: gray;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* justify-content: center; */
-}
-
-.product>img{
-    width: 160px;
-    height: 140px;
-    margin-top: 10px;
-    object-fit: contain;
-    background-color: slategray;
+.product { 
+  width: 180px;
+  height: 180px;
+  margin-left: 20px;
+  margin-top: 20px;
+  background-color: gray;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  /* justify-content: center; */
 }
 
-.product>p{
-    margin-top: 0px;
+.product > img {
+  width: 160px;
+  height: 140px;
+  margin-top: 10px;
+  object-fit: contain;
+  background-color: white;
 }
 
-.panel{
-    margin-left: 50px;
+.product > p {
+  margin-top: 0px;
 }
 
-.screen{
-    width: 400px;
-    height: 600px;
-    background-color: white;
-    border: 10px solid;
-    border-color: rgb(40, 40, 40);
-    border-radius: 30px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
+.panel {
+  margin-left: 50px;
 }
 
-.push{
-    display: flex;
-    width: 400px;   
-    height: 150px;
-    background-color: crimson;
-    margin-top: 40px;
-    margin-left: 20px;
-    justify-content: center;
-    align-items: center;
-    border-width: 100px;
-    border-color: black;
-    border-radius: 0px 0px 20px 20px ;
+.screen {
+  width: 400px;
+  height: 600px;
+  background-color: white;
+  border: 10px solid;
+  border-color: rgb(40, 40, 40);
+  border-radius: 30px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  margin: auto;
+  vertical-align: middle;   
+  position: relative;
 }
 
-.push>p{
-    margin: 0;
-    padding: 0;
-    font-size: 120px;
-    font-weight: bold;
-    color: lemonchiffon;
+.push {
+  display: flex;
+  width: 400px;
+  height: 150px;
+  background-color: crimson;
+  margin-top: 40px;
+  margin-left: 20px;
+  justify-content: center;
+  align-items: center;
+  border-width: 100px;
+  border-color: black;
+  border-radius: 0px 0px 20px 20px;
 }
 
-.default{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* height: 100%; */
-    /* align-items: center; */
+.push > p {
+  margin: 0;
+  padding: 0;
+  font-size: 120px;
+  font-weight: bold;
+  color: lemonchiffon;
 }
 
-.cart{
-    height: 210px;
-    border: 2px solid;
-    border-radius: 10px 10px 0px 0px;
-    position: relative;
-    margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    width: 400px;
-    overflow-x: auto; /* Enables horizontal scrolling */
-    white-space: nowrap;
+.default {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* height: 100%; */
+  align-items: center;
 }
 
-#cart{
-    position: absolute;
-    margin-left: 10px;
-    margin-top: 5px;
+.cart {
+  height: 210px;
+  border: 2px solid;
+  border-radius: 10px 10px 0px 0px;
+  position: relative;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  width: 400px;
+  overflow-x: auto; /* Enables horizontal scrolling */
+  white-space: nowrap;
 }
 
-.cart-item{
-    margin-top: 35px;
-    position: relative;
-    height: 150px;
-    width: 100px;
-    border: 2px solid;
-    margin-left: 10px;
-    border-radius: 5px;
+#cart {
+  position: absolute;
+  margin-left: 10px;
+  margin-top: 5px;
 }
 
-hr{
-    margin: 0;
-}
-
-.photo>img{
-    margin-left: 5px;
-    height: 100px;
-    width: 90px;
-    margin-top: 5px;
-    object-fit: contain;
-}
-
-#cart-price{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    margin-top: -5px;
-    margin-left: 5px;
-}
-
-.counter{
-    position: absolute;
-    bottom: -5px;
-    right: -5px;
-    border: 1px solid;
-    background-color: yellow;
-    border-radius: 50px;
-    font-size: 20px;
-    font-weight: bold;
-    padding: 5px;
-}
-
-.remove{
-    position: absolute;
-    top: 0px;
-    right: 2px;
-    font-size: 20px;
-}
-
-.bill-container{
-    width: 400px;
-    margin: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-.bill-row {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-}
-
-.bill-row span {
-    font-size: 16px;
+.cart-item {
+  margin-top: 35px;
+  position: relative;
+  height: 150px;
+  width: 100px;
+  border: 2px solid;
+  margin-left: 10px;
+  border-radius: 5px;
 }
 
 hr {
-    border: none;
-    border-top: 1px solid black;
-    margin: 10px 0;
+  margin: 0;
 }
 
-#pay{
-    font-size: 50px;
-    font-weight: bold;
+.photo > img {
+  margin-left: 5px;
+  height: 100px;
+  width: 90px;
+  margin-top: 5px;
+  object-fit: contain;
 }
+
+#cart-price {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  margin-top: -5px;
+  margin-left: 5px;
+}
+
+.counter {
+  position: absolute;
+  bottom: -5px;
+  right: -5px;
+  border: 1px solid;
+  background-color: yellow;
+  border-radius: 50px;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 5px;
+}
+
+.remove {
+  position: absolute;
+  top: 0px;
+  right: 2px;
+  font-size: 20px;
+}
+
+.bill-container {
+  width: 400px;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.bill-row {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.bill-row span {
+  font-size: 16px;
+}
+
+hr {
+  border: none;
+  border-top: 1px solid black;
+  margin: 10px 0;
+}
+
+#pay {
+  font-size: 50px;
+  font-weight: bold;
+  box-shadow: 0 9px #999;
+  width: 200px;
+}
+#pay:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
+  #pay:hover {background-color: #3e8e41}
 
 /* Payment */
-.payment{
+.payment {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+
+#title {
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.QR {
+  width: 200px;
+  height: 200px;
+  background-color: black;
+}
+
+#money {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+#warning {
+  font-size: 20px;
+}
+
+#timer {
+  margin: 0;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+#cancel {
+  width: 150px;
+  font-size: 30px;
+}
+
+.payment-success,
+.payment-failed {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  height: 100%;
+}
+
+.happy > img {
+  height: 300px;
+  width: 300px;
+  margin-top: -50px;
+}
+
+#thanks,
+#failed {
+  font-size: 25px;
+  margin: 0;
+  text-align: center;
+}
+
+.main-menu,
+.try-again {
+  width: 200px;
+  font-size: 30px;
+  margin-top: 40px;
+}
+
+.collect {
+  width: 140px;
+  height: 140px;
+  position: absolute;
+  display: none;
+  flex-direction: row;
+  /* width: 100%;
+    height: 100%; */
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
+}
+
+.collect img {
+  display: flex;
+  position: relative;
+  width: 130px;
+  height: 130px;
+  background-color: inherit;
+}
+
+.payment,
+.payment-failed,
+.payment-success {
+  display: none;
+}
+
+.product img {
+  transition: transform 0.3s ease-in-out;
+}
+
+.product img:hover {
+  transform: scale(1.05);
+}
+
+.expand-fade {
+    transform: scale(2);  /* Expand */
+    opacity: 0;  /* Fade out */
+    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+
+#admin{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-}
-
-#title{
-    font-size: 50px;
-    font-weight: bold;
-}
-
-.QR{
-    width: 200px;
-    height: 200px;
-    background-color: black;
-}
-
-#money{
-    font-size: 30px;
-    font-weight: bold;
-}
-
-#warning{
-    font-size: 20px;
-}
-
-#timer{
-    margin: 0;
-    font-size: 25px;
-    font-weight: bold;
-}
-
-#cancel{
-    width: 150px;
-    font-size: 30px;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    border-radius: 3px;
+    border: white;
+    opacity: 70%;
     
 }
 
-.payment-success, .payment-failed{
-    display: flex;
+.admin-login{
+    display: none;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    padding: 20px;
-    height: 100%;
 }
 
-.happy>img{
-    height: 300px;
-    width: 300px;
-    margin-top: -50px;
+.admin-login>p{
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 30px;
 }
 
-#thanks, #failed{
-    font-size: 25px;
+.admin-login>input{
+    font-size: 20px;
+    margin: 10px;
+}
+
+#login-feedback{
+    font-size: 20px;
+    font-weight: normal;
+    color: rgb(173, 5, 5);
+}
+
+#login-button{
+    font-size: 20px;
+}
+
+.admin{
+    display: none;
+    flex-direction: column;
+    overflow-y:auto;
+}
+
+
+.admin>p{
     margin: 0;
-    text-align: center;
-}
-
-.main-menu, .try-again{
-    width: 200px;
+    padding: 0;
     font-size: 30px;
-    margin-top: 40px;
+    align-self: center;
 }
 
-.collect{
-    width: 400px;   
-    height: 150px;
-    position: absolute;
-    display: none;
-    flex-direction: row;
-    /* width: 100%;
-    height: 100%; */
-    justify-content: space-around;
-    align-items: center;
-    align-content: center;
+.admin>hr{
+    margin: 0;
+    margin-bottom: 20px;
+    padding: 0;
 }
 
-.col{
+.product-cont{
     display: flex;
-    position: relative;
-    width: 130px;
-    height: 130px;
-    background-color: inherit;
 }
 
-.payment, .payment-failed, .payment-success{
+.visual{
+    position: relative;
+    width: 120px;
+    height: 120px;
+    margin-right: 40px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    border: solid gray;
+    border-radius: 10px;
+}
+
+.visual>img{
+    width: 120px;
+    height: 120px;
+    object-fit: contain;
+}
+
+.det{
+    display: flex;
+    align-items: center;
+    padding: 0px;
+    margin: 0px; 
+    height: 30px;  
+}
+
+#quantity-num{
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.det>button{
+    height: 20px;
+}
+
+#price-change{
+    width: 40px;
+    margin-left: -5px;
+}
+
+.det>p{
+    margin-right: 10px;
+}
+
+.image-link{
+    width: 140px;
+}
+
+#save{
+    margin-top: 15px;
+}
+
+
+
+
+
+
+
+
+/* .default, .admin-login{
     display: none;
 }
+.admin{
+    display: flex;
+} */
