--- a/helper.css
+++ b/helper.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    text-align: center;
+    text-align: center;  
     padding: 20px;
 }
 .container {
@@ -22,4 +22,20 @@ button {
 }
 button:hover {
     background-color: #218838;
+}
+
+.feedback{
+    
+    display: flex;
+    text-align: left;
+}
+.completed{
+    display: none;
+    flex-direction: column;
+    max-width: 425px;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
