--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h1 {
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  /* background-color: ; */
 }
 .product { 
   width: 180px;
@@ -40,6 +41,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 10px;
   
   /* justify-content: center; */
 }
@@ -49,7 +51,8 @@ h1 {
   height: 140px;
   margin-top: 10px;
   object-fit: contain;
-  background-color: white;
+  /* background-color: white; */
+  background-color: rgb(218, 176, 176);
 }
 
 .product > p {
@@ -219,22 +222,17 @@ hr {
 }
 
 #title {
-  font-size: 50px;
+  font-size: 40px;
   font-weight: bold;
 }
 
-.QR {
-  width: 200px;
-  height: 200px;
-  background-color: black;
-}
-
 #money {
-  font-size: 30px;
+  font-size: 25px;
   font-weight: bold;
 }
 
 #warning {
+  margin-top: -10px;
   font-size: 20px;
 }
 
@@ -451,3 +449,8 @@ hr {
 .admin{
     display: flex;
 } */
+
+
+body{
+  background-color: #f39c6b;
+}
