--- a/css/style.css
+++ b/css/style.css
@@ -352,8 +352,9 @@ hr {
     color: rgb(173, 5, 5);
 }
 
-#login-button{
+#login-button,#login-cancel{
     font-size: 20px;
+    margin-bottom: 30px;
 }
 
 .admin{
