--- a/css/helper.css
+++ b/css/helper.css
@@ -3,6 +3,10 @@ body {
     text-align: center;  
     padding: 20px;
 }
+p{
+    font-size: 20px;
+    margin: 10px;
+}
 .container {
     max-width: 400px;
     margin: auto;
@@ -30,6 +34,7 @@ button:hover {
     max-width: 415px;
     margin: auto;
     padding: 20px;
+    padding-top: 0px;
     border: 1px solid #ddd;
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
