--- a/css/helper.css
+++ b/css/helper.css
@@ -8,6 +8,8 @@ p{
     margin: 10px;
 }
 .container {
+    display: flex;
+    flex-direction: column;
     max-width: 400px;
     margin: auto;
     padding: 20px;
@@ -16,6 +18,7 @@ p{
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 button {
+    margin: 10px;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
@@ -45,4 +48,31 @@ button:hover {
     flex-direction: column;
     max-width: 430px;
     margin: auto;
+}
+
+.item{
+    display: flex;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.details{
+    display: flex;
+    flex-direction: column;
+    text-align:start;
+    justify-content: center;
+    align-items: center;
+}
+
+.price{
+    display: flex;
+    flex-direction: row;
+}
+
+.visual{
+    width: 100px;
+    height: 100px;
+    border: 1px solid;
+    margin: 5px;
 }
