--- a/css/helper.css
+++ b/css/helper.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    text-align: center;  
+    text-align: center;
     padding: 20px;
 }
 p{
@@ -75,4 +75,26 @@ button:hover {
     height: 100px;
     border: 1px solid;
     margin: 5px;
+}
+
+.visual>img{
+    object-fit: contain;
+    width: 100px;
+    height: 100px;
+}
+
+.first{
+    margin: auto;
+}
+.timer{
+    display: flex;
+    flex-direction: column; 
+}
+#timer{
+    font-weight: bold;
+}
+
+.cart{
+    height: 400px;
+    overflow-y: auto;
 }
